<?xml version="1.0"?>
<package format="3">
  <name>ros2_pyads_interfaces</name>
  <version>0.1.0</version>
  <description>ros2_pyads messages to/from ROS messages</description>
  <maintainer  email="jodle001@me.com">Jacob Odle</maintainer>
  <license>TODO</license>
  <author email="jodle001@me.com">Jacob Odle</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
